# logoCleaner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/logocleaner/: cli.py  exceptions.py
src/logocleaner/background/: detect.py
src/logocleaner/core/: colors.py  pipeline.py  types.py  validation.py
src/logocleaner/image_io/: load.py  save.py
src/logocleaner/masks/: alpha.py
src/logocleaner/strategies/: base.py  border_connected.py  global_color.py
tests/: test_alpha.py  test_background_detection.py  test_border_connected.py  test_colors.py  test_global_color.py  test_pipeline.py  test_strategy_interface.py
